# games-project-zueva

./: .gitignore  Makefile  pyproject.toml
VD_games/: VD_calculator.py  VD_even.py  VD_gcd.py  brain_calc.py  engine.py
games_project_zueva.egg-info/: PKG-INFO  SOURCES.txt
scripts/: VD_main.py  VD_prime.py  VD_progression.py  brain_calc.py  calc.py  cli.py  start.py
