[project]
name = "games-project-zueva"
version = "0.1.0"
description = "Brain Games Collection"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = []
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
VD_games = "VD_games.scripts.VD_games:main"
VD_even = "VD_games.scripts.VD_even:main"
brain-calc = "scripts.brain_calc:run"
VD_gcd = "VD_games.scripts.VD_gcd:play_gcd"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["VD_games"]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]
